--- a/app/components/Footer/Footer.module.css
+++ b/app/components/Footer/Footer.module.css
@@ -1,63 +1,179 @@
 .body1 {
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 27px;
-    text-align: center;
-    color: #002458;
-
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 27px;
+  text-align: center;
+  color: #002458;
 }
 
-.box{
-    width: 100%;
-    height: auto;
-    padding: 120px 200px;
-   
-    gap: 10px;
-    background: #E6EEFB;
-    margin-top: 120px;
-    
+.box {
+  width: 100%;
+  height: auto;
+  padding: 6.505% 10.84%;
+
+  gap: 10px;
+  background: #e6eefb;
+  margin-top: 120px;
 }
 
-.content{
-    width: 100%; /* Set to 100% of its parent container */
-    max-width: 1520px; /* Limits the width to a maximum of 1520px */
-    height: 198px;
-    gap: 48px;
-    margin: auto;   
-    border: 2px solid red;
+.content {
+  width: 100%;
+  max-width: 1520px;
+  min-height: 198px;
+  gap: 48px;
+  margin: auto;
+  /* border: 2px solid red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.upperBox{
-    width: 100%;
-    height: 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items:center ;
+.upperBox {
+  width: 100%;
+  min-height: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  /* border: 1px solid indianred; */
 }
 
-.leftUpper{
-    width: 425px;
-    height: 27px;
-    /* gap: 48px; */
-    /* border: 1px solid red; */
+.leftUpper {
+  /* border: 1px solid rgb(105, 205, 92); */
+  width: 425px;
 
+  min-height: 27px;
+  /* gap: 48px; */
+}
+
+.rightUpper {
+  height: 100%;
+  min-width: 11.93%;
+  gap: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* border: 1px solid rgb(11, 32, 230); */
+  /* margin: auto; */
 }
 
 .navigation {
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    list-style: none;
-    text-align: center;
-    text-decoration: none;
-    gap: 48px;
+  display: flex;
+  align-items: center;
+  list-style: none;
+  text-align: center;
+  text-decoration: none;
+  gap: 48px;
 }
 
+.icon {
+  width: 40px;
+  height: auto;
+  color: #0056d2;
+}
 
-.rightUpper{
-    height: 100%;
-    width: 12%;
-    gap: 24px;
-    border: 2px solid red;
+.lowerBox {
+  width: 100%;
+  min-height: 60px;
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  /* border: 1px solid violet; */
+}
 
+.leftLower {
+  max-width: 381px;
+  min-height: 27px;
+  /* border: 1px solid rgb(247, 247, 0); */
+}
+
+.middleLower {
+  max-width: 218.73px;
+  max-height: 60px;
+  /* border: 2px solid gray; */
+  gap: 9.73px;
+}
+
+.imgBox {
+  width: 100%;
+  height: 100%;
+}
+
+.rightLower {
+  /* border: 2px solid red; */
+  width: 100%;
+  max-width: 285px;
+  min-height: 27px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.visibility {
+  display: none;
+}
+
+@media only screen and (max-width: 1134px) {
+  .lowerBox {
+    flex-direction: row;
+  }
+
+  .leftLower {
+    margin: auto;
+  }
+
+  .middleLower {
+    margin: auto;
+  }
+
+  .rightLower {
+    margin: auto;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .leftUpper {
+    margin: auto;
+  }
+  .rightUpper {
+    margin: auto;
+    margin-top: 26px;
+  }
+
+  .lowerBox {
+    gap: 12px;
+  }
+}
+
+@media only screen and (max-width: 549px) {
+  .body1 {
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 500;
+  }
+
+  .upperBox {
+   margin-top: 5%;
+    /* border: 1px solid indianred; */
+  }
+
+  .navigation {
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .icon {
+    width: 24px;
+  }
+
+  .visibility {
+    display: block;
+  }
+
+  .rightLower {
+    width: 100%;
+    max-width: 211.5px;
+    min-height: 21px;
+  }
 }
