--- a/app/components/Working/Working.module.css
+++ b/app/components/Working/Working.module.css
@@ -131,7 +131,7 @@
 }
 
 .rightLower {
-  border: 2px solid rgb(128, 0, 60);
+  /* border: 2px solid rgb(128, 0, 60); */
   max-width: 580px;
   /* height: 515.13px; */
   height: auto;
