--- a/app/articles/[slug]/page.module.css
+++ b/app/articles/[slug]/page.module.css
@@ -1,81 +1,241 @@
-
-.heading3{
-    font-size: 40px;
-    line-height: 60px;
-    text-align: center;
-    columns: #002458;
+.heading3 {
+  font-size: 40px;
+  line-height: 60px;
+  text-align: center;
+  columns: #002458;
 }
 
-.subtitle4{
-    font-size: 20px;
-    line-height: 30px;
-    color: #002458;
-    /* text-align: center; */
+.subtitle4 {
+  font-size: 20px;
+  line-height: 30px;
+  color: #002458;
 }
 
-.body4{
-    font-size: 16px;
-    line-height: 24px;
-    color: #767A78;
-    text-align: center;
+.body4 {
+  font-size: 16px;
+  line-height: 24px;
+  color: #767a78;
+  text-align: center;
 }
 
-.nav{
-    border: 1px solid black;
-    max-width: 420px;
-    min-height: 30px;
-    margin: 120px auto 60px 200px;
-
+.body1 {
+  font-size: 18px;
+  line-height: 27px;
+  color: #767a78;
+  text-align: justify;
 }
 
-.article{
-    max-width: 1520px;
-    height: 1367px;
-    border: 1px solid black;
-    margin: auto;
-    display:flex;
-    flex-direction: column;
-    justify-content: space-between;
+.nav {
+  /* border: 1px solid black; */
+  max-width: 1520px;
+  min-height: 30px;
+  margin: 120px auto 60px auto;
+  gap: 10px;
+  /* white-space: nowrap; */
 }
 
-.title{
-    max-width: 748px;
-    height: 108px;
+.article {
+  max-width: 1520px;
+  height: 100%;
+  /* border: 2px solid rgb(0, 38, 255); */
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 60px;
+}
+
+.title {
+  max-width: 748px;
+  width: 100%;
+  max-height: 108px;
+  margin: 0px auto;
+  gap: 24px;
+  /* border: 1px solid black; */
+}
+
+.design {
+  width: 100%;
+  max-height: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.square {
+  width: 16px;
+  height: 16px;
+  transform: rotate(45deg);
+  background-color: #548ee1;
+}
+
+.raw {
+  width: 43%;
+  height: 4px;
+  color: #e6eefb;
+}
+
+.detail {
+  width: 100%;
+  height: fit-content;
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.profile {
+  max-width: 372px;
+  height: 78px;
+  gap: 20px;
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid rgb(0, 180, 30); */
+  align-items: center;
+}
+
+.profileImage {
+  height: 100%;
+  max-width: 68px;
+  /* border: 2px solid rgb(28, 0, 128); */
+}
+
+.profileImage img {
+  width: 100%;
+  height: 100%;
+}
+
+.profileDetail {
+  /* border: 1px solid rgb(255, 0, 0); */
+  max-width: 284px;
+  max-height: 58px;
+  gap: 4px;
+}
+
+.content {
+  width: 100%;
+  height: fit-content;
+  gap: 24px;
+  /* border: 2px solid rgb(21, 128, 0); */
+}
+
+.contentText {
+  margin: 25px auto;
+}
+
+.box {
+  max-width: 81.68vw;
+  max-height: 668px;
+  margin: 120px auto;
+}
+
+.img1 {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
+@media only screen and (max-width: 1580px) {
+  .nav {
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+
+  .article {
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+
+  .box {
+    /* margin: 10px auto; */
+    margin-top: 10px;
+    margin-bottom: -60px;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  .heading3 {
+    font-size: 24px;
+    line-height: 36px;
+  }
+
+  .subtitle4 {
+    font-size: 14px;
+    line-height: 21px;
+  }
+
+  .nav {
+    /* border: 1px solid black; */
+    margin: 24px;
+  }
+
+  .article {
+    margin: 24px;
+    margin-bottom: 0px;
+    gap: 24px;
+  }
+
+  .title {
+    max-width: 400px;
+    width: 100%;
+    max-height: 108px;
     margin: 0px auto;
     gap: 24px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+  }
 }
 
-.content{
-    width: 100%;
-    height: 1199px;
-    border: 1px solid red;
-}
+@media only screen and (max-width: 620px) {
+  .title {
+    max-width: 350px;
+  }
 
-.profile{
-    max-width: 372px;
+  .square {
+    width: 12px;
+    height: 12px;
+  }
+  .body4 {
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .profile {
+    max-width: 312px;
     height: 68px;
-    gap: 20px;
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid gray;
-    align-items:center;
+    gap: 16px;
+  }
 
-}
-
-.profileImage{
-    height: 100%;
-    width: 68px;
-}
-
-.profileImage img{
-    width: 100%;
-    height: 100%;
-}
-
-.profileDetail{
-    border: 1px solid rgb(255, 0, 0);
+  .profileDetail {
+    /* border: 1px solid rgb(255, 0, 0); */
     max-width: 284px;
-    height: 58px;
+    max-height: 58px;
     gap: 4px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .heading3 {
+    font-size: 18px;
+    line-height: 27px;
+  }
+
+  .title {
+    max-width: 220px;
+  }
+
+  .profile {
+    max-width: 312px;
+    min-height: 48px;
+  }
+
+  .profileDetail {
+    /* border: 1px solid rgb(255, 0, 0); */
+    max-width: 248px;
+    min-height: 44px;
+    gap: 2px;
+  }
+
+  .body4 {
+    line-height: 0px;
+  }
 }
