--- a/app/components/FAQ/Faq.module.css
+++ b/app/components/FAQ/Faq.module.css
@@ -27,21 +27,16 @@
 }
 
 .container {
-  max-width: 1050px;
-  /* min-height: 808px; */
-
+  /* max-width: 1050px; */
+  max-width: 1520px;
+  /* width: 100%;  */
   min-height: 640px;
   max-height: 100%;
-  gap: 60px;
   margin: 120px auto 0px auto;
-  /* border: 3px solid rgb(207, 9, 9); */
-
-  /* display: flex;
-
-  flex-direction: column; */
-  /* justify-content: center;
-  align-items: center; */
+  gap: 60px;
+  /* border: 1px solid rgb(207, 9, 9); */
 }
+
 
 .upperContainer {
   max-width: 100%;
@@ -71,12 +66,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* border: 1px solid red; */
 }
 
 .description {
-  width: 990px;
-  max-width: 100%;
-  height: 30px;
+  /* width: 990px; */
+  width: 100%;
+  min-height: 30px;
   border-radius: 8px;
   margin: auto;
   gap: 10px;
@@ -103,6 +99,7 @@
 .visible {
   display: block;
 }
+
 .hidden {
   display: none;
 }
@@ -121,6 +118,13 @@
   text-align: center;
   margin-left: 50%;
   transform: translateX(-50%);
+}
+
+@media only screen and (max-width: 1570px) {
+  .container {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
 
 @media only screen and (max-width: 540px) {
