--- a/app/aboutus/page.module.css
+++ b/app/aboutus/page.module.css
@@ -40,12 +40,10 @@
   max-width: 899px;
   width: 100%;
   min-height: 252px;
-  /* border: 2px solid black; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* gap: 48px; */
 }
 
 .upperFinanceBox {
@@ -56,11 +54,9 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* border: 2px solid yellowgreen; */
 }
 
 .upperBox1 {
-  /* border: 2px solid rgb(50, 205, 205); */
   width: 100%;
   min-height: 72px;
   display: flex;
@@ -69,13 +65,11 @@
 }
 
 .upperBox2 {
-  /* border: 2px solid rgb(164, 205, 50); */
   max-width: 681px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* min-height: 60px; */
 }
 
 .btn {
@@ -87,7 +81,6 @@
   font-size: 22px;
   line-height: 26.4px;
   border: none;
-  /* padding: 17px 48px 17px 48px; */
   gap: 10px;
   cursor: pointer;
 }
@@ -96,7 +89,6 @@
 .article {
   width: 83.48vw;
   height: 100%;
-  /* border: 2px solid rgb(0, 38, 255); */
   margin: 120px auto;
   gap: 12px;
 }
@@ -104,7 +96,6 @@
 .detail {
   width: 100%;
   height: fit-content;
-  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -115,13 +106,15 @@
   margin: 0px auto 12px auto;
   height: fit-content;
   gap: 12px;
-  /* border: 3px solid rgb(21, 128, 0); */
 }
 
-.contentText {
-  /* border: 1px solid #002458; */
-  /* margin: 0px auto 8px auto; */
-  margin-bottom: 25px;
+.contentText p{
+  margin-bottom: 8px;
+}
+
+.contentText h3{
+  font-weight: 900;
+  color: #000;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -222,7 +215,6 @@
     height: 44px;
     text-align: center;
     border: 1px solid #0056d2;
-    /* padding: 12px 48px 12px 48px; */
   }
 }
 
