--- a/app/components/Header/Navbar.module.css
+++ b/app/components/Header/Navbar.module.css
@@ -66,9 +66,15 @@
     display: none;
 }
 
+.closeIcon{
+    display: none;
+    /* width: 48px;
+    height: 48px; */
+    font-size: 28px;
+}
+
 .menuIcon {
-    width: 24px;
-    height: 24px;
+    font-size: 28px;
     cursor: pointer;
     display: none;
 }
@@ -76,33 +82,37 @@
 .menuCheckbox:checked~.rightNavBox {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     background-color: #E6F0FF;
-    position: absolute;
+    position: fixed;
     top: 100px;
     right: 0px;
     width: 100%;
     height: 100vh;
-    z-index: 3;
-    transition:  all 0.3s ease;
+    z-index: 1;
+    /* overflow: hidden; */
+    transition:  all 3s ease;
 }
 
 .menuCheckbox:checked~.rightNavBox .navigation {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    /* align-items: flex-start;
+    justify-content: flex-start; */
     /* width: 70vw; */
     width: 100%;
-    gap: 20px;
+    gap: 48px;
     margin-top: 50px;
     /* height: 60vh; */
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
-.menuCheckbox:checked~.rightNavBox .closeIcon {
+.menuCheckbox:checked~ .menuIcon {
+    display: none;
+}
+
+.menuCheckbox:checked~ .closeIcon {
     display: block;
-    position: absolute;
-    top: 20px;
-    right: 20px;
     cursor: pointer;
 }
 
@@ -133,15 +143,10 @@
         display: none;
 
     }
-    .closeIcon{
-        display: block;
-    }
 
     .menuIcon {
         display: block;
     }
-    .navigation {
-        gap: 15px;
-    }
+
 
 }
