--- a/app/articles/page.module.css
+++ b/app/articles/page.module.css
@@ -39,12 +39,10 @@
   max-width: 899px;
   width: 100%;
   min-height: 252px;
-  /* border: 2px solid black; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* gap: 48px; */
 }
 
 .upperFinanceBox {
@@ -55,20 +53,16 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* border: 2px solid yellowgreen; */
 }
 
 .upperBox1 {
-  /* border: 2px solid rgb(50, 205, 205); */
   width: 100%;
   min-height: 72px;
 }
 
 .upperBox2 {
-  /* border: 2px solid rgb(164, 205, 50); */
   max-width: 681px;
   width: 100%;
-  /* min-height: 60px; */
 }
 
 .btn {
@@ -80,7 +74,6 @@
   font-size: 22px;
   line-height: 26.4px;
   border: none;
-  /* padding: 17px 48px 17px 48px; */
   gap: 10px;
   cursor: pointer;
 
@@ -89,16 +82,14 @@
 /* ARTICLE LISTS */
 
 .heading5 {
-  font-size: 24x;
+  font-size: 24px;
   line-height: 36px;
-  /* text-align: center; */
   color: #002458;
 }
 
 .body1 {
   font-size: 18px;
   line-height: 27px;
-  /* text-align: center; */
   color: #555555;
 }
 
@@ -110,14 +101,12 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* border: 2px solid black; */
   margin: 120px auto 0px auto;
 }
 
 .upperContainer {
   width: 100%;
   height: 72px;
-  /* border: 1px solid yellowgreen; */
 }
 
 .lowerContainer {
@@ -135,7 +124,6 @@
   border-radius: 20px;
   border: 1px solid #EAEAEA;
   border: 1px solid var(--Light_grey, #EAEAEA);
-  /* padding-top: 5px; */
   display: flex;
   flex-direction: column;
 }
@@ -298,7 +286,6 @@
     width: 335px;
     height: 341px;
     border-radius: 12px;
-    /* border: 0.79px solid #EAEAEA;     */
   }
 
   .image {
@@ -322,6 +309,5 @@
     height: 44px;
     text-align: center;
     border: 1px solid #0056d2;
-    /* padding: 12px 48px 12px 48px; */
   }
 }
