--- a/app/components/Article/Article.module.css
+++ b/app/components/Article/Article.module.css
@@ -6,17 +6,15 @@
 }
 
 .heading5 {
-  font-size: 24x;
+  font-size: 24px;
   line-height: 36px;
-  /* text-align: center; */
   color: #002458;
 }
 
 .body1 {
   font-size: 18px;
   line-height: 27px;
-  color: #767A78;
-  
+  color: #767a78;
 }
 
 .container {
@@ -27,14 +25,12 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* border: 2px solid black; */
   margin: 120px auto 0px auto;
 }
 
 .upperContainer {
   width: 100%;
   height: 72px;
-  /* border: 1px solid yellowgreen; */
 }
 
 .lowerContainer {
@@ -44,7 +40,6 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  /* border: 2px solid rgb(70, 0, 128); */
 }
 
 .content {
@@ -52,7 +47,6 @@
   height: 438px;
   border-radius: 20px;
   border: 1px solid #eaeaea;
-  /* padding-top: 5px; */
   display: flex;
   flex-direction: column;
   margin-bottom: 4%;
@@ -81,41 +75,31 @@
   height: 60px;
   border: 2px solid #0056d2;
   border-radius: 168px;
-  /* padding: 17px 48px 17px 48px; */
   text-align: center;
   margin-top: -4%;
 }
 
 .pagination {
-    /* border: 1px solid black; */
-    max-width:  395px;
-    /* width: 100%; */
-    /* max-height: 40px; */
-    /* height: 100%; */
-    gap: 12px;
-    display: flex;
-    align-items: center;
+  max-width: 395px;
+  gap: 12px;
+  display: flex;
+  align-items: center;
 }
 
-.page{
-    width: 40px;
-    /* width: 100%; */
-    height: 40px;
-    border-radius: 8px;
-    border: 1px solid #E8E8E8;
-    background: #FFFFFF;
-
-    /* background: #FFFFFF; */
-    /* border: 1px solid #000000; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    cursor: pointer;
-
+.page {
+  width: 40px;
+  height: 40px;
+  border-radius: 8px;
+  border: 1px solid #e8e8e8;
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
 }
 
-.visibility{
+.visibility {
   display: none;
 }
 
@@ -158,7 +142,6 @@
     width: 335px;
     height: 341px;
     border-radius: 12px;
-    /* border: 0.79px solid #EAEAEA;     */
   }
 
   .image {
@@ -182,6 +165,5 @@
     height: 44px;
     text-align: center;
     border: 1px solid #0056d2;
-    /* padding: 12px 48px 12px 48px; */
   }
 }
