--- a/app/components/Header/Navbar.module.css
+++ b/app/components/Header/Navbar.module.css
@@ -31,9 +31,11 @@
 .imgBox {
     width: 200.73px;
     height: 60px;
+    /* border: 1px solid black; */
 }
 
 .imgBox img {
+    /* border: 0.4px solid rgb(0, 245, 53); */
     width: 100%;
     height: 100%;
 }
@@ -42,8 +44,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: 1px solid red; */
-    /* display: none; */
 }
 
 .navigation {
@@ -54,6 +54,7 @@
     text-align: center;
     text-decoration: none;
     gap: 48px;
+
 }
 
 .closeIcon {
@@ -64,6 +65,7 @@
 
 .menuCheckbox {
     display: none;
+
 }
 
 .menuIcon {
@@ -71,39 +73,47 @@
     height: 24px;
     cursor: pointer;
     display: none;
+
 }
 
 .menuCheckbox:checked~.rightNavBox {
     display: flex;
     flex-direction: column;
-    background-color: #E6F0FF;
-    position: absolute;
+    justify-content: flex-start;
+    background-color: #FFFFFF;
+    position: fixed;
     top: 100px;
     right: 0px;
     width: 100%;
     height: 100vh;
-    z-index: 3;
-    transition:  all 0.3s ease;
+    z-index: 1;
+
+
 }
 
 .menuCheckbox:checked~.rightNavBox .navigation {
-    display: flex;
+
     flex-direction: column;
-    align-items: flex-start;
-    /* width: 70vw; */
     width: 100%;
-    gap: 20px;
+    gap: 48px;
     margin-top: 50px;
-    /* height: 60vh; */
-    border: 1px solid red;
 }
 
-.menuCheckbox:checked~.rightNavBox .closeIcon {
+.menuCheckbox:checked~.rightNavBox li {
+
+    width: 80%;
+    border-bottom: 1px solid #767A7833;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.menuCheckbox:checked~ .closeIcon {
     display: block;
-    position: absolute;
-    top: 20px;
-    right: 20px;
     cursor: pointer;
+}
+.menuCheckbox:checked~ .menuIcon {
+    display: none;
 }
 
 @media only screen and (max-width: 1120px) {
@@ -133,15 +143,8 @@
         display: none;
 
     }
-    .closeIcon{
-        display: block;
-    }
-
     .menuIcon {
         display: block;
-    }
-    .navigation {
-        gap: 15px;
     }
 
 }
