--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
 html,
 body {
   max-width: 100vw;
+  height: 100vh;
   overflow-x:hidden;
 }
 
@@ -16,4 +17,3 @@ body {
   max-width: 100%;
   overflow-x:hidden;
 }
-
