--- a/app/termsOfUse/page.module.css
+++ b/app/termsOfUse/page.module.css
@@ -41,12 +41,10 @@
   max-width: 899px;
   width: 100%;
   min-height: 252px;
-  /* border: 2px solid black; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* gap: 48px; */
 }
 
 .upperFinanceBox {
@@ -57,11 +55,9 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* border: 2px solid yellowgreen; */
 }
 
 .upperBox1 {
-  /* border: 2px solid rgb(50, 205, 205); */
   width: 100%;
   min-height: 72px;
   display: flex;
@@ -70,13 +66,11 @@
 }
 
 .upperBox2 {
-  /* border: 2px solid rgb(164, 205, 50); */
   max-width: 681px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* min-height: 60px; */
 }
 
 .btn {
@@ -88,7 +82,6 @@
   font-size: 22px;
   line-height: 26.4px;
   border: none;
-  /* padding: 17px 48px 17px 48px; */
   gap: 10px;
   cursor: pointer;
 }
@@ -97,7 +90,6 @@
 .article {
   width: 83.48vw;
   height: 100%;
-  /* border: 2px solid rgb(0, 38, 255); */
   margin: 120px auto;
   gap: 12px;
 }
@@ -105,7 +97,6 @@
 .detail {
   width: 100%;
   height: fit-content;
-  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -116,12 +107,21 @@
   margin: 0px auto 12px auto;
   height: fit-content;
   gap: 12px;
-  /* border: 1px solid rgb(21, 128, 0); */
 }
 
-.contentText {
-  margin: 0px auto 8px auto;
+
+.page_content h3 {
+  margin-bottom: 8px;
+  margin-top: 8px;
+  color:  #252628;
 }
+
+.page_content p {
+  margin-bottom: 8px;
+  color: #767A78;
+}
+
+
 
 @media only screen and (max-width: 1024px) {
   .finance {
@@ -221,7 +221,6 @@
     height: 44px;
     text-align: center;
     border: 1px solid #0056d2;
-    /* padding: 12px 48px 12px 48px; */
   }
 }
 
